travail du 2 novembre aprem

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>Répliques</title>
 </head>
 <body>
     <!-- EX 1 -->
@@ -12,13 +12,15 @@
 
     <h2 id="selected">Aucune Réplique séléctionnée.</h2>
 
-    <p id="r1" class="replique">Réplique 1 : <span>« Pourquoi voulez-vous boxer ?" - Parce que je ne peux pas chanter ou danser »</span> (Rocky)</p>
+    <div id="repliques">
+        <p id="r1" class="replique">Réplique 1 : <span>« Pourquoi voulez-vous boxer ?" - Parce que je ne peux pas chanter ou danser »</span> (Rocky)</p>
 
-    <p id="r2" class="replique">Réplique 2 : <span>« Il y a un dicton en Italie : on peut se brûler la langue avec un bol de soupe. - Il y a un dicton en Irlande : rien à foutre des dictons italiens ».</span> (Piège en eaux troubles)</p>
+        <p id="r2" class="replique">Réplique 2 : <span>« Il y a un dicton en Italie : on peut se brûler la langue avec un bol de soupe. - Il y a un dicton en Irlande : rien à foutre des dictons italiens ».</span> (Piège en eaux troubles)</p>
 
-    <p id="r3" class="replique">Réplique 3 : <span>« Alex, ne fait pas ça, c'est ton frère! - Pourquoi, parce qu'il me ressemble? Je vais changer ça tout de suite »</span> (Double Impact)</p>
+        <p id="r3" class="replique">Réplique 3 : <span>« Alex, ne fait pas ça, c'est ton frère! - Pourquoi, parce qu'il me ressemble? Je vais changer ça tout de suite »</span> (Double Impact)</p>
 
-    <p id="r4" class="replique">Réplique 4 : <span>« T'aimes bien les omelettes ? ... Tiens, je te casse les œufs ! »</span> (Last Action Hero)</p>
+        <p id="r4" class="replique">Réplique 4 : <span>« T'aimes bien les omelettes ? ... Tiens, je te casse les œufs ! »</span> (Last Action Hero)</p>
+    </div>
 
     <!-- EX 4 -->
     <button id="haut">↥</button>
